[metadata]
name = viasp
version = 0.5.4
author = Luis Glaser
author_email = Luis.Glaser@uni-potsdam.de
description = a visualization tool for clingo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glaserL/viasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    viasp-backend>=0.2.1
    viasp-dash>=0.5.3
