[metadata]
name = viasp
version = 1.3.1
author = Luis Glaser
author_email = Luis.Glaser@uni-potsdam.de
description = a visualization tool for clingo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glaserL/viasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    viasp-backend>=1.3.1
    viasp-dash>=1.1.5
packages = find:
package_dir =
    =.
[options.packages.find]
where = .
exclude = 
    frontend
    backend