[metadata]
name = viasp
version = 0.0.2
author = Luis Glaser
author_email = Luis.Glaser@uni-potsdam.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glaserL/viasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    networkx>=2.4
    flask>=2
    clingo==5.5.0.post3
    flask-cors>=3.0
    clingox>=1.0.0
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viasp-start = viasp.__main__:start

[options.extras_require]
testing =
    pytest
